# EduCloud-Backend

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  CMakeUserPresets.json.example  README.md  config.json  config.yaml  docker-compose.yml  main.cc  vcpkg.json
controllers/: TestCtrl.cc  api_v1_Assignment.cc  api_v1_Assignment.h  api_v1_Login.cc  api_v1_Login.h  api_v1_Module.cc  api_v1_Module.h  api_v1_admin_Assignment.cc  api_v1_admin_Assignment.h  api_v1_admin_Module.cc  api_v1_admin_Module.h  api_v1_admin_User.cc  api_v1_admin_User.h  demo_v1_User.h
db/: db.sql  pg_db.sql
middlewares/: model_parser_ParseModel.cc  model_parser_ParseModel.h
models/: Assignment.cc  Assignment.h  Category.cc  Category.h  Grade.cc  Grade.h  Profession.cc  Profession.h  Subject.cc  Subject.h  Teacher.cc  Teacher.h  Teacherassignment.cc  Teacherassignment.h  Teachersubject.cc  Teachersubject.h  Teacheruser.cc  Teacheruser.h  User.cc  User.h  Userdata.cc  Userdata.h  model.json
test/: CMakeLists.txt
